--- a/package.json
+++ b/package.json
@@ -22,12 +22,6 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  },
-  "homepage": "http://www.rajisteb.github.io/skreamer"
+    "eject": "react-scripts eject"
+  }
 }
